discussion/kv_engine/172221/172221_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51413: Create MockCouchKVStore in replaceCouchKVStore

It's test code so the greater flexibility is useful.

Change-Id: Ib76d1c35b85db9d9e725b2fde6bbd11f42824ae1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-03-18 17:44:46.000000000
Message: 
Uploaded patch set 5: Patch Set 4 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-18 18:07:46.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16080/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10: error: "hdr_histogram.h" file not found [clang-diagnostic-error]
#include <hdr_histogram.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16080/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/hdrhistogram/hdrhistogram.h:29:10:
error: "hdr_histogram.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16080/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44541/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44541/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15006/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/tests/mock/mock_couch_kvstore.h b/engines/ep/tests/mock/mock_couch_kvstore.h
index f50f53c35..1b65e67cd 100644
--- a/engines/ep/tests/mock/mock_couch_kvstore.h
+++ b/engines/ep/tests/mock/mock_couch_kvstore.h
@@ -120,7 +120,8 @@ public:
 
         updateLocalDocuments(*db, pendingLocalReqsQ);
 
-        errCode = couchstore_commit(db, [](const std::system_error&amp;){return true;});
+        errCode = couchstore_commit(
+                db, [](const std::system_error&amp;) { return true; });
 
         return !errCode;
     }
diff --git a/engines/ep/tests/module_tests/kvstore_error_injection_test.cc b/engines/ep/tests/module_tests/kvstore_error_injection_test.cc
index 88a3b89df..0c0f2966d 100644
--- a/engines/ep/tests/module_tests/kvstore_error_injection_test.cc
+++ b/engines/ep/tests/module_tests/kvstore_error_injection_test.cc
@@ -85,7 +85,8 @@ public:
 
     void failAllSnapshotVBuckets() override {
         using namespace testing;
-        EXPECT_CALL(ops, sync(_, _)).WillRepeatedly(Return(COUCHSTORE_ERROR_WRITE));
+        EXPECT_CALL(ops, sync(_, _))
+                .WillRepeatedly(Return(COUCHSTORE_ERROR_WRITE));
     }
 
     bool deleteLocalDoc(Vbid vbid, std::string_view key) override {
@@ -122,9 +123,7 @@ public:
     }
 
     void failAllSnapshotVBuckets() override {
-        kvstore-&gt;snapshotVBucketErrorInjector = []() {
-            return false;
-        };
+        kvstore-&gt;snapshotVBucketErrorInjector = []() { return false; };
     }
 
     bool deleteLocalDoc(Vbid vbid, std::string_view key) override {
@@ -893,7 +892,8 @@ TEST_P(KVStoreErrorInjectionTest, WarmupVBucketWithoutState) {
     // Before the fix we would fail during a warmup backfill as magma would not
     // create a scan context if a vBucket state did not exist on disk.
     EXPECT_NO_THROW(runReadersUntilWarmedUp());
-    EXPECT_EQ(WarmupState::State::Done, engine-&gt;getKVBucket()-&gt;getWarmup()-&gt;getWarmupState());
+    EXPECT_EQ(WarmupState::State::Done,
+              engine-&gt;getKVBucket()-&gt;getWarmup()-&gt;getWarmupState());
 }
 
 INSTANTIATE_TEST_SUITE_P(

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15006/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17848/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">2 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17848/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18170/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">2 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18170/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5795/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">2 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5795/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37495/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18882/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5737/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16923/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26255/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-03-21 08:13:08.000000000
Message: 
Topic 7.1.1 removed
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-03-21 09:29:42.000000000
Message: 
Patch Set 5: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
